add all projects

--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,9 @@
                     <small>August, 2022</small>
                     <p>A profit and loss calculator app built with <strong>Vanilla JS</strong>. Know in an attractive way if you are on profit or loss on particular stock investment.</p>
 
-                    <a class="link link-primary" href="https://stocks-profit-loss-calci.netlify.app/">Live
+                    <a class="link link-primary" href="https://stocks-profit-loss-calci.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-fourteen">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-fourteen" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -52,9 +52,9 @@
                     <small>August, 2022</small>
                     <p>A palindrome birthday app built with <strong>Vanilla JS</strong>. Know if you were born on palindrome day and if not then by how many days you missed.</p>
 
-                    <a class="link link-primary" href="https://palin-drome-birth-day.netlify.app/">Live
+                    <a class="link link-primary" href="https://palin-drome-birth-day.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-thirteen">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-thirteen" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -67,9 +67,9 @@
                     <small>August, 2022</small>
                     <p>A triangle quiz and education app built with <strong>Vanilla JS</strong>. You can know play quiz to know how better you know triangles.</p>
 
-                    <a class="link link-primary" href="https://fun-with-tri-ang-les.netlify.app/">Live
+                    <a class="link link-primary" href="https://fun-with-tri-ang-les.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-twelve">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-twelve" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -82,9 +82,9 @@
                     <small>August, 2022</small>
                     <p>A know if your birthday is lucky app built with <strong>Vanilla JS</strong>. You can know if your birthday is lucky.</p>
 
-                    <a class="link link-primary" href="https://know-is-your-birthday-lucky.netlify.app/">Live
+                    <a class="link link-primary" href="https://know-is-your-birthday-lucky.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eleven">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eleven" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -97,9 +97,9 @@
                     <small>August, 2022</small>
                     <p>A cash register manager app built with <strong>Vanilla JS</strong>. You can know the number of particular notes to be returned based bill amount and cash given.</p>
 
-                    <a class="link link-primary" href="https://cash-registering-management.netlify.app/">Live
+                    <a class="link link-primary" href="https://cash-registering-management.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-ten">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-ten" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -112,9 +112,9 @@
                     <small>August, 2022</small>
                     <p>A book recommendation based on genre app built with <strong>React</strong>. You can know the best books in particular genre.</p>
 
-                    <a class="link link-primary" href="https://get-book-recommendations.netlify.app">Live
+                    <a class="link link-primary" href="https://get-book-recommendations.netlify.app" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-nine">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-nine" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -127,9 +127,9 @@
                     <small>August, 2022</small>
                     <p>A emoji interpreter built with <strong>React</strong>. You can know the meaning of emoji's in our database.</p>
 
-                    <a class="link link-primary" href="https://emojis-decipherer.netlify.app">Live
+                    <a class="link link-primary" href="https://emojis-decipherer.netlify.app" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eight">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eight" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -142,9 +142,9 @@
                     <small>August, 2022</small>
                     <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to Dothraki language.</p>
 
-                    <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/">Live
+                    <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-seven">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-seven" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -159,9 +159,9 @@
                         really
                         knows you</p>
 
-                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-two">Live
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-two" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-two">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-two" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -177,9 +177,9 @@
                         really
                         knows you</p>
 
-                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one" target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -190,13 +190,13 @@
         <div class="footer-header">social media presence</div>
         <ul class="list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/HarishFullStack"> github </a>
+                <a class="link" href="https://github.com/HarishFullStack" target="_blank"> github </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+                <a class="link" href="https://twitter.com/i_harishgupta" target="_blank"> twitter </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+                <a class="link" href="https://www.linkedin.com/in/connectharishgupta" target="_blank">
                     linkedin
                 </a>
             </li>
