--- a/blog-one.html
+++ b/blog-one.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog one | harish gupta</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/images/coding.png" />
     <link href="styles.css" rel="stylesheet" />
 </head>
 
