--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects | harish gupta</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/images/coding.png" />
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -35,11 +36,14 @@
                 <div class="container container-center margin-top">
                     <h1>Stocks Profit and Loss Calculator</h1>
                     <small>August, 2022</small>
-                    <p>A profit and loss calculator app built with <strong>Vanilla JS</strong>. Know in an attractive way if you are on profit or loss on particular stock investment.</p>
+                    <p>A profit and loss calculator app built with <strong>Vanilla JS</strong>. Know in an attractive
+                        way if you are on profit or loss on particular stock investment.</p>
 
-                    <a class="link link-primary" href="https://stocks-profit-loss-calci.netlify.app/" target="_blank">Live
+                    <a class="link link-primary" href="https://stocks-profit-loss-calci.netlify.app/"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-fourteen" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-fourteen"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -50,11 +54,13 @@
                 <div class="container container-center margin-top">
                     <h1>Palindrome Birthday App</h1>
                     <small>August, 2022</small>
-                    <p>A palindrome birthday app built with <strong>Vanilla JS</strong>. Know if you were born on palindrome day and if not then by how many days you missed.</p>
+                    <p>A palindrome birthday app built with <strong>Vanilla JS</strong>. Know if you were born on
+                        palindrome day and if not then by how many days you missed.</p>
 
                     <a class="link link-primary" href="https://palin-drome-birth-day.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-thirteen" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-thirteen"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -65,11 +71,13 @@
                 <div class="container container-center margin-top">
                     <h1>Do You Know Your Triangles</h1>
                     <small>August, 2022</small>
-                    <p>A triangle quiz and education app built with <strong>Vanilla JS</strong>. You can know play quiz to know how better you know triangles.</p>
+                    <p>A triangle quiz and education app built with <strong>Vanilla JS</strong>. You can know play quiz
+                        to know how better you know triangles.</p>
 
                     <a class="link link-primary" href="https://fun-with-tri-ang-les.netlify.app/" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-twelve" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-twelve"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -80,11 +88,14 @@
                 <div class="container container-center margin-top">
                     <h1>Is Your Birthday Lucky</h1>
                     <small>August, 2022</small>
-                    <p>A know if your birthday is lucky app built with <strong>Vanilla JS</strong>. You can know if your birthday is lucky.</p>
+                    <p>A know if your birthday is lucky app built with <strong>Vanilla JS</strong>. You can know if your
+                        birthday is lucky.</p>
 
-                    <a class="link link-primary" href="https://know-is-your-birthday-lucky.netlify.app/" target="_blank">Live
+                    <a class="link link-primary" href="https://know-is-your-birthday-lucky.netlify.app/"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eleven" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eleven"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -95,11 +106,14 @@
                 <div class="container container-center margin-top">
                     <h1>Cash Register Manager</h1>
                     <small>August, 2022</small>
-                    <p>A cash register manager app built with <strong>Vanilla JS</strong>. You can know the number of particular notes to be returned based bill amount and cash given.</p>
+                    <p>A cash register manager app built with <strong>Vanilla JS</strong>. You can know the number of
+                        particular notes to be returned based bill amount and cash given.</p>
 
-                    <a class="link link-primary" href="https://cash-registering-management.netlify.app/" target="_blank">Live
+                    <a class="link link-primary" href="https://cash-registering-management.netlify.app/"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-ten" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-ten"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -110,11 +124,14 @@
                 <div class="container container-center margin-top">
                     <h1>Good books recommendation app</h1>
                     <small>August, 2022</small>
-                    <p>A book recommendation based on genre app built with <strong>React</strong>. You can know the best books in particular genre.</p>
+                    <p>A book recommendation based on genre app built with <strong>React</strong>. You can know the best
+                        books in particular genre.</p>
 
-                    <a class="link link-primary" href="https://get-book-recommendations.netlify.app" target="_blank">Live
+                    <a class="link link-primary" href="https://get-book-recommendations.netlify.app"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-nine" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-nine"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -125,11 +142,13 @@
                 <div class="container container-center margin-top">
                     <h1>Know Your Emoji</h1>
                     <small>August, 2022</small>
-                    <p>A emoji interpreter built with <strong>React</strong>. You can know the meaning of emoji's in our database.</p>
+                    <p>A emoji interpreter built with <strong>React</strong>. You can know the meaning of emoji's in our
+                        database.</p>
 
                     <a class="link link-primary" href="https://emojis-decipherer.netlify.app" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eight" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eight"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -140,11 +159,31 @@
                 <div class="container container-center margin-top">
                     <h1>GOT - Dothraki Traslation</h1>
                     <small>August, 2022</small>
-                    <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to Dothraki language.</p>
+                    <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to
+                        Dothraki language.</p>
 
-                    <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/" target="_blank">Live
+                    <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-seven" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-seven"
+                        target="_blank">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Banana Talk Traslation</h1>
+                    <small>August, 2022</small>
+                    <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to
+                        Banana language.</p>
+
+                    <a class="link link-primary" href="https://talk-banana-translator.netlify.app/" target="_blank">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-six"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -159,9 +198,11 @@
                         really
                         knows you</p>
 
-                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-two" target="_blank">Live
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-two"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-two" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-two"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
@@ -177,9 +218,11 @@
                         really
                         knows you</p>
 
-                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one" target="_blank">Live
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one"
+                        target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one" target="_blank">View
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one"
+                        target="_blank">View
                         Source</a>
                 </div>
             </article>
